# RustScreenRecorder

./: .gitignore  Cargo.toml
.github/workflows/: build.yml  rust.yml
frontend/: package-lock.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: CustomSelect.tsx  MainView.tsx  SettingsView.tsx  Sidebar.tsx
src/: main.rs
